--- a/python/requirements_flight-streaming.txt
+++ b/python/requirements_flight-streaming.txt
@@ -2,6 +2,7 @@ PySocks==1.7.1
 certifi==2019.9.11
 chardet==3.0.4
 functions-framework==3.*
+protobuf==3.20.*
 google-api-core==1.22.1
 google-auth==1.20.1
 google-auth-oauthlib==0.4.4
